CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.6

	- Documentation updates (STR #2646, STR #2647, STR #2649)
	- The scheduler incorrectly treated MIME types as case-
	  sensitive (STR #2657)
	- The Java support classes did not send UTF-8 strings to
	  the scheduler (STR #2651)
	- The CGI code did not handle interrupted POST requests
	  properly (STR #2652)
	- The PostScript filter incorrectly handled number-up when
	  the number of pages was evenly divisible by the number-up
	  value.
	- The PDF filter incorrectly filtered pages when page-ranges
	  and number-up were both specified (STR #2643)
	- The IPP backend did not handle printing of pictwps files
	  to a non-Mac CUPS server properly.
	- The scheduler did not detect network interface changes
	  on operating systems other than Mac OS X (STR #2631)
	- The scheduler now logs the UNIX error message when it
	  is unable to create a request file such as a print job.
	- Added support for --enable-pie on Mac OS X.


CHANGES IN CUPS V1.3.5

	- The SNMP backend did not check for negative string
	  lengths (STR #2589)
	- The scheduler incorrectly removed auth-info attributes,
	  potentially leading to a loss of all options for a job.
	- The scheduler stopped sending CUPS browse packets on a
	  restart when using fixed addresses (STR #2618)
	- Fixed PDF filter security issues (CVE-2007-4352
	  CVE-2007-5392 CVE-2007-5393)
	- Changing settings would always change the DefaultAuthType
	  and Allow lines (STR #2580)
	- The scheduler would crash when submitting an undefined
	  format file from Samba with LogLevel debug2 (STR #2600)
	- The scheduler did not use poll() when epoll() was not
	  supported by the running kernel (STR #2582)
	- Fixed a compile problem with Heimdal Kerberos (STR #2592)
	- The USB backend now retries connections to a printer
	  indefinitely rather than stopping the queue.
	- Printers with untranslated JCL options were not exported
	  to Samba correctly (STR #2570)